POST request in progress

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,12 @@
         "lines-between-class-members": "off",
         "class-methods-use-this": "off",
         "import/extensions": "off",
-        "import/no-unresolved": "off"
+        "import/no-unresolved": "off",
+        "no-console": "off",
+        "linebreak-style": "off",
+        "eol-last": "off",
+        "no-multiple-empty-lines": "off",
+        "indent": "off",
+        "no-trailing-spaces": "off"
     }
 }
