--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,9 @@
         "eol-last": "off",
         "no-multiple-empty-lines": "off",
         "indent": "off",
-        "no-trailing-spaces": "off"
+        "no-trailing-spaces": "off",
+        "spaced-comment": "off",
+        "no-param-reassign": "off",
+        "padded-blocks":"off"
     }
 }
